// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"Title" renders (dark theme) 1`] = `
<div
  className="css-1mc7zwm-StyledAppContainer"
>
  <div
    className="css-16j78gg-Title"
  >
    Title
  </div>
</div>
`;

exports[`"Title" renders 1`] = `
<div
  className="css-7uml9n-StyledAppContainer"
>
  <div
    className="css-16j78gg-Title"
  >
    Title
  </div>
</div>
`;
